--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 }
 	</style>
   </head>
-  <body onload="check_session();" class="theme-green">
+  <body onload="initial();" class="theme-green">
     <div class="statusbar-overlay"></div>
     <div class="panel-overlay"></div>
     <div class="panel panel-left panel-cover">
